api-service.yaml
apiVersion: v1
kind: Service 
metadata:
  name: api-service
spec:
  selector:
    app: synergychat-api
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30080
